Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h
@@ -474,7 +474,7 @@ private:
         Optional<Seconds> computedBeginTime() const
         {
             if (m_beginTime)
-                return m_beginTime - m_timeOffset;
+                return *m_beginTime - m_timeOffset;
             return WTF::nullopt;
         }
 
@@ -484,7 +484,7 @@ private:
         int m_index;
         int m_subIndex;
         Seconds m_timeOffset { 0_s };
-        Seconds m_beginTime { 0_s };
+        Optional<Seconds> m_beginTime;
         PlayState m_playState { PlayState::PlayPending };
         bool m_pendingRemoval { false };
     };
@@ -616,6 +616,7 @@ private:
     
     Vector<LayerPropertyAnimation> m_animations;
     Vector<LayerPropertyAnimation> m_baseValueTransformAnimations;
+    Vector<LayerPropertyAnimation> m_animationGroups;
 
     Vector<FloatRect> m_dirtyRects;
 
